# pokesql

./: .gitignore  README.md  docker-compose.yml  run-db
Back/: .env  Cargo.toml  Rocket.toml
Back/src/: attacks.rs  main.rs  pokeballs.rs  pokedex.rs  response.rs  types.rs
Back/src/arenas/: duels.rs  members.rs  mod.rs  regions.rs
Back/src/pokedex/: mod.rs  pokedex.rs
Back/src/pokemon/: mod.rs  pokemon.rs
Back/src/types/: counters.rs  mod.rs
Back/src/user/: login.rs  mod.rs  register.rs  users.rs
Base/: 01-create-tables.sql  02-create-types.sql  02-funcs-procs.sql  02-mock-data.sql  02-triggers.sql  03-create-regions.sql  04-create-pokedex.sql  05-create-pokeballs.sql  05-create-pokedex.sql  07-create-couters.sql  99-test.sql  schema.sql
Front/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
Front/src/: index.html
Front/src/app/: app-navigation.ts  app-routing.module.ts  app.component.scss  app.module.ts  not-authorized-container.ts  token.service.ts  unauthenticated-content.ts
Front/src/app/arena-dashboard/: arena-dashboard.component.ts
Front/src/app/arena-entry/: arena-entry.component.html  arena-entry.component.scss  arena-entry.component.ts
Front/src/app/arena-list/: arena-list.component.html  arena-list.component.ts
Front/src/app/attack-entry/: attack-entry.component.html  attack-entry.component.scss  attack-entry.component.ts
Front/src/app/attack-list/: attack-list.component.html  attack-list.component.scss  attack-list.component.ts
Front/tester/: .gitignore  tester  tester.nim
(+105 files in other folders)
